gcc/testsuite/algol68/compile/error-mode-stropping-5.a68
begin proc union (int,real) j;
      j := "joo" { dg-error "char.*proc union \\( *real *, *int *\\)" }
end
